tests/NormalTests/paczka1/small_fuzzy/35472573.err
Error in line 1: KNMyzNo A754 65,8
Error in line 8: UgCDxC5kz A569 21,6
Error in line 3: KNMyzNo A476 8,0
